Workshop OAuth test standard plugin and auth method plugin

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_SUBDIRECTORY(zonal_statistics)
 ADD_SUBDIRECTORY(georeferencer)
 ADD_SUBDIRECTORY(gps_importer)
 ADD_SUBDIRECTORY(topology)
+ADD_SUBDIRECTORY(oauth_test)
 ADD_SUBDIRECTORY(offline_editing)
 ADD_SUBDIRECTORY(heatmap)
 ADD_SUBDIRECTORY(geometry_checker)
