--- a/src/auth/CMakeLists.txt
+++ b/src/auth/CMakeLists.txt
@@ -14,5 +14,6 @@ SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${QGIS_OUTPUT_DIRECTORY}/${QGIS_PLUGIN_SUBDI
 
 ADD_SUBDIRECTORY(basic)
 ADD_SUBDIRECTORY(identcert)
+ADD_SUBDIRECTORY(oauth)
 ADD_SUBDIRECTORY(pkipaths)
 ADD_SUBDIRECTORY(pkipkcs12)
